//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "controlplane/v1/response_messages.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service OrgInvitationService {
  // Create an invitation for a user to join an organization.
  rpc Create(OrgInvitationServiceCreateRequest) returns (OrgInvitationServiceCreateResponse);
  // Revoke an invitation.
  rpc Revoke(OrgInvitationServiceRevokeRequest) returns (OrgInvitationServiceRevokeResponse);
  // List all invitations sent by the current user.
  rpc ListSent(OrgInvitationServiceListSentRequest) returns (OrgInvitationServiceListSentResponse);
}

message OrgInvitationServiceCreateRequest {
  string organization_id = 1 [(validate.rules).string.uuid = true];
  string receiver_email = 2 [(validate.rules).string.email = true];
}

message OrgInvitationServiceCreateResponse {
  OrgInvitationItem result = 1;
}

message OrgInvitationServiceRevokeRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message OrgInvitationServiceRevokeResponse {}

message OrgInvitationServiceListSentRequest {}

message OrgInvitationServiceListSentResponse {
  repeated OrgInvitationItem result = 1;
}

message OrgInvitationItem {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  string receiver_email = 3;
  User sender = 4;
  Org organization = 5;
  string status = 6;
}
